--- a/index.html
+++ b/index.html
@@ -1,17 +1,57 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Google</title>
+		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<link type="image/jpeg" rel="icon" href="images/favicon.jpg"/>
+	</head>
 
-<head>
-	<title>Google</title>
-</head>
+	<body>
+		<div id="header">
+			<ul>
+				
+				<li><a href="">+Colin</a></li>
+				<li><a href="">Gmail</a></li>
+				<li><a href="">Images</a></li>
+				<li id="apps_icon"><a href=""><img src="images/apps.png" alt="Apps"/></a></li>
+				<li id="notifications_icon"><a href=""><img src="images/notification.png" alt="Notifications"/></a></li>
+				<li id="profile_icon"><a href=""><img src="images/user.png" alt="Your Profile"/></a></li>
+			</ul>
+		</div>
 
-<body>
-	<u1>
-		<li>+You</li>
-		<li>Gmail</li>
-		<li>Images</li>
-	</u1>
-</body>
+		<div id="page_contents">
+			<img id="google_logo" src="images/google.png" alt="Google"/>
+			<form action="somescript.php" method="get">
+				<input id="searchbox" type="text" name="SearchQuery"/>
+				<!--a href=""><img id="voice_icon" src="images/voice.gif"/></a>!-->
 
+				<br/>
+				
+				<div class="centering">
+					<input id="button" type="submit" value="Google Search"/>
+					<input id="button" type="submit" value="I'm Feeling Lucky"/>
+				</div>
+			</form>
+
+			<br/>
+			<br/>
+
+			<div id="fun_factoid">
+				OK Google, <a href="https://www.google.com/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=how+many+calories+are+in+pumpkin+pie%3F">how many calories are in pumpkin pie?</a>
+			</div>
+		</div>
+
+		<div id="footer">
+			<ul id="navbar_bottom_left">
+				<li><a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a></li>
+				<li><a href="https://www.google.com/services/?fg=1">Business</a></li>
+				<li><a href="https://www.google.com/intl/en/about/">About</a></li>
+			</ul>
+			<ul id="navbar_bottom_right">
+				<li><a href="https://www.google.com/intl/en/policies/?fg=1">Privacy & Terms</a></li>
+				<li><a href="">Settings</a></li>
+			</ul>
+		</div>
+	</body>
 
 </html>
